# low_power_speech_recognition

./: .gitignore  README.md  evaluate_model.py  requirements.txt  transcription_from_mic.py
evaluation/: README.md  RTF.py  UPL.py  WER.py  eval.py  evaluate_model.py  requirements.txt  spgispeech_eval.py
evaluation/assets/: generate.sh
moonshine/: README.md  live_transcription.py  requirements.txt
moonshine-enhanced/: README.md  main.py  model_requirements.txt  requirements.txt  self_start_setup.sh  start.sh
moonshine-enhanced/src/: __init__.py  live_trans.py
moonshine/apple_src/: __init__.py  file_trans.py
moonshine/src/: __init__.py  file_trans.py  file_transcription.py  live_trans.py
moonshine_cpp/: .gitignore  CMakeLists.txt
moonshine_cpp/examples_linux/: CMakeLists.txt  alt_conio.cpp  alt_conio.hpp  file.cpp  live.cpp
moonshine_cpp/model/base/: cached_decode.onnx  encode.onnx  tokenizer.json  uncached_decode.onnx
moonshine_cpp/scripts/: build.sh
moonshine_cpp/src/: moonshine.cpp
vosk/: file_trans.py  live_trans.py  requirements.txt
whisper.cpp/: eval.sh  qt.sh
whisper_cpp/: __init__.py  file_trans.py  requirements.txt
whisper_cpp/src/: .gitignore  CMakeLists.txt  README.md  prepare.sh
whisper_cpp/src/.github/workflows/: examples-wasm.yml
whisper_cpp/src/bindings/go/: README.md
whisper_cpp/src/bindings/java/: README.md
whisper_cpp/src/bindings/javascript/: README.md
whisper_cpp/src/examples/: generate-karaoke.sh  livestream.sh  server.py  twitch.sh  yt-wsp.sh
whisper_cpp/src/examples/addon.node/: README.md
whisper_cpp/src/examples/bench.wasm/: README.md
whisper_cpp/src/examples/command.wasm/: README.md
whisper_cpp/src/examples/stream.wasm/: README.md
whisper_cpp/src/examples/whisper.nvim/: whisper.nvim
whisper_cpp/src/examples/whisper.wasm/: README.md
whisper_cpp/src/scripts/: sync-ggml-am.sh
whisper_cpp/used before/: eval.sh
